fixed header and footer spacing

--- a/recipebook.css
+++ b/recipebook.css
@@ -59,7 +59,3 @@ main > section {
     flex-direction: column;
     align-items: center;
 }
-
-li {
-    padding-top: 20px;
-}
